--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,6 @@
 /* Mobile Screen */
 @media only screen and (max-width: 600px) {
-    #main-slide .item img{
-        width: 100%;
-    }
+   
     #main-slide .slider-content{
         top: 45%;
         margin-top: -70px;
@@ -46,6 +44,60 @@
         -moz-transition: all 0.3s;
         -o-transition: all 0.3s;
         transition: all 0.3s;
+    }
+    #fixtures .container .row h3{
+        font-size: 16px;
+    }
+
+}
+@media only screen and (max-width: 600px) {
+   
+    #main-slide .slider-content{
+        top: 45%;
+        margin-top: -70px;
+        
+        left: 0;
+        padding: 0 0 0 0;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        color: #fff;
+    }
+    #main-slide .slider-content h1{
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 5px;
+        letter-spacing: 5px;
+        margin-bottom: 33px;
+        color: #fff;
+        font-family: 'Oswald', sans-serif;
+    }
+    #main-slide .slider-content p{
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 20px;
+        letter-spacing: 1px;
+        margin-bottom: 10px;
+        margin-top: -12px;
+        color: #fff;
+    }
+    .btn-primary {
+        text-transform: uppercase;
+        font-weight: 100;
+        font-size: 12px;
+        color: #fff;
+        -webkit-border-radius:3px;
+        -moz-border-radius:3px;
+        -o-border-radius:3px;
+        border-radius:3px;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        -o-transition: all 0.3s;
+        transition: all 0.3s;
+    }
+    #fixtures .container .row h3{
+        font-size: 16px;
     }
 
 }
