--- a/css/home.css
+++ b/css/home.css
@@ -48,6 +48,9 @@
     #fixtures .container .row h3{
         font-size: 16px;
     }
+    #news .container .row .col-md-12 .section-title{
+        padding-top: -10px;
+    }
 
 }
 @media only screen and (max-width: 600px) {
@@ -63,6 +66,9 @@
         width: 100%;
         height: 100%;
         color: #fff;
+    }
+    .navbar-default .navbar-brand {
+        font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
     }
     #main-slide .slider-content h1{
         font-size: 20px;
@@ -101,3 +107,17 @@
     }
 
 }
+.call-to-action .container .row h3{
+    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
+    font-size: 25px;
+    color: white;
+}
+#news .container .row .col-md-4 img{
+    box-shadow: 5px 0px lightgray;
+    width: 100%;
+    transition: 0.5s all ease-in-out;
+}
+#news .container .row .col-md-4 img :hover{
+    transform: scale(1.5);
+}
+
