--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    //font-weight: 700;
+    font-weight: 700;
 }
 
 ul {
@@ -67,7 +67,7 @@ li {
 
 .section-title h3{
     color: #666;
-    //font-style: italic;
+    font-style: italic;
     font-size: 28px;
     font-family: 'Oswald', sans-serif;
     text-transform: none;
@@ -77,7 +77,7 @@ li {
     padding-bottom: 60px;
     color: #999;
     font-size: 18px;
-    //font-style: italic;
+    font-style: italic;
     font-weight: 300;
 }
 
@@ -868,7 +868,7 @@ li {
 .portfolio-section-2 {
     padding-top: 80px;
     padding-bottom: 120px;
-    //background: #f7f7f7;
+    background: #f7f7f7;
 }
 
 .portfolio-section-3 {
@@ -1003,7 +1003,7 @@ and (min-width : 551px){
    font-size: 18px;
    padding: 10px;
    background: #fff;
-   //margin: 20px 0 0 0;
+   margin: 20px 0 0 0;
     position: relative;
     top: 14%;
     font-family: 'Oswald', sans-serif;
@@ -1021,7 +1021,7 @@ and (min-width : 551px){
     background: #fff;
     position: absolute;
     top: 60%;
-    //left: 40%;
+    left: 40%;
 }
 
 .portfolio-caption a.link-1 i {
@@ -1038,7 +1038,7 @@ and (min-width : 551px){
 /*---------------------------------------------------------*/
 
 .about-us-section-1 {
-    padding-top: -80px;
+    padding-top: 80px;
     padding-bottom: 60px;
 }
 
@@ -1268,7 +1268,7 @@ and (min-width : 551px){
 .testimonials .testimonial-content p {
 	font-size: 20px;
 	line-height: 30px;
-	//font-style: italic;
+	font-style: italic;
 	font-weight: 400;
     margin-bottom: 40px;
 	color: #fff;
@@ -1292,11 +1292,11 @@ and (min-width : 551px){
 }
 
 .touch-slider .owl-controls.clickable .owl-buttons div:hover {
-	//background-color: #00afd1;
+	background-color: #00afd1;
 }
 
 .touch-carousel .owl-controls.clickable .owl-buttons div:hover {
-	//background-color: #00afd1;
+	background-color: #00afd1;
 }
 
 .testimonials-carousel .owl-controls.clickable .owl-buttons div{
@@ -1366,7 +1366,7 @@ and (min-width : 551px){
     background-attachment: fixed;
     background-repeat: no-repeat;
     padding-top: 80px;
-    //padding-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 .contact .btn-primary {
